--- a/package.json
+++ b/package.json
@@ -1,44 +1,62 @@
 {
-  "name": "dashboard-dummy",
-  "version": "0.0.0",
+  "name": "paola",
+  "version": "1.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve -o",
     "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "lint": "ng lint",
+    "e2e": "ng e2e",
+    "install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && npm install && npm start"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^14.0.0",
-    "@angular/cdk": "^14.0.5",
-    "@angular/common": "^14.0.0",
-    "@angular/compiler": "^14.0.0",
-    "@angular/core": "^14.0.0",
-    "@angular/forms": "^14.0.0",
-    "@angular/material": "^14.0.5",
-    "@angular/platform-browser": "^14.0.0",
-    "@angular/platform-browser-dynamic": "^14.0.0",
-    "@angular/router": "^14.0.0",
-    "bootstrap": "^5.1.3",
-    "chart.js": "^3.8.0",
-    "ng2-charts": "^4.0.0",
-    "rxjs": "~7.5.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.11.4"
+    "@angular/animations": "13.3.1",
+    "@angular/cdk": "^13.3.1",
+    "@angular/common": "^13.3.1",
+    "@angular/compiler": "^13.3.1",
+    "@angular/core": "^13.3.1",
+    "@angular/elements": "^13.3.1",
+    "@angular/forms": "^13.3.1",
+    "@angular/localize": "13.3.1",
+    "@angular/platform-browser": "^13.3.1",
+    "@angular/platform-browser-dynamic": "^13.3.1",
+    "@angular/router": "^13.3.1",
+    "@fortawesome/fontawesome-free": "^6.1.1",
+    "@ng-bootstrap/ng-bootstrap": "12.0.1",
+    "@popperjs/core": "^2.11.4",
+    "@swimlane/ngx-charts": "^20.1.0",
+    "bootstrap": "4.6.1",
+    "chart.js": "2.9.4",
+    "clipboard": "2.0.10",
+    "core-js": "3.21.1",
+    "ngx-clipboard": "15.0.1",
+    "ngx-toastr": "14.2.2",
+    "nouislider": "15.5.1",
+    "rxjs": "^7.5.5",
+    "zone.js": "~0.11.5"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^14.0.6",
-    "@angular/cli": "~14.0.6",
-    "@angular/compiler-cli": "^14.0.0",
-    "@types/jasmine": "~4.0.0",
-    "jasmine-core": "~4.1.0",
-    "karma": "~6.3.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~5.0.0",
-    "karma-jasmine-html-reporter": "~1.7.0",
-    "ng2-charts-schematics": "^0.1.7",
-    "typescript": "~4.7.2"
+    "@angular-devkit/build-angular": "^13.3.1",
+    "@angular/cli": "^13.3.1",
+    "@angular/compiler-cli": "^13.3.1",
+    "@angular/language-service": "13.3.1",
+    "@types/jasmine": "~3.10.3",
+    "@types/jasminewd2": "~2.0.10",
+    "@types/node": "16.3.2",
+    "codelyzer": "6.0.2",
+    "jasmine-core": "~4.0.1",
+    "jasmine-spec-reporter": "~7.0.0",
+    "karma": "^6.3.17",
+    "karma-chrome-launcher": "~3.1.1",
+    "karma-coverage": "^2.2.0",
+    "karma-coverage-istanbul-reporter": "~3.0.3",
+    "karma-jasmine": "~4.0.1",
+    "karma-jasmine-html-reporter": "^1.7.0",
+    "protractor": "7.0.0",
+    "ts-node": "~10.7.0",
+    "tslint": "6.1.3",
+    "typescript": "~4.4.2"
   }
 }
